# apertium-tat-rus

./: .gitattributes  .gitignore  AUTHORS  Makefile.am  README  apertium-tat-rus.rus-tat.lrx  apertium-tat-rus.tat-rus.dix  apertium-tat-rus.tat-rus.lrx  apertium-tat-rus.tat-rus.t1x  apertium-tat-rus.tat-rus.t2x  apertium-tat-rus.tat-rus.t3x  apertium-tat-rus.tat-rus.t4x  apertium-tt-ru.ru.lexc  apertium-tt-ru.tt-ru.dix  apertium-tt-ru.tt-ru.lrx  apertium-tt-ru.tt.lexc  apertium-tt-ru.tt.twol  apertium-view.sh  configure.ac  info.rkt  main.rkt  modes.xml  pending-tests.sh  qa  qa.sh  regression-tests.sh  wiki-tests.sh
corpa/: README  corpus.rus.txt  corpus.tat.txt  ru.txt  tat-rus-nova.txt  tat-rus-origina.txt  tat-rus-posted.txt
corpus/: README  corpus.rus.txt  corpus.tat.txt  tat-rus-nova.txt  tat-rus-origina.txt  tat-rus-posted.txt
dev/: Pending_tests.html  Regression_tests.html  testGenerator.sh
dev/shupashkar/: apertium-tt-ru.ru.twol  apertium-tt-ru.tt-ru.rlx
test/: tat-rus-pending-chunker-expected.txt  tat-rus-pending-disam-expected.txt  tat-rus-pending-generator-expected.txt  tat-rus-pending-input.txt  tat-rus-pending-interchunk2-expected.txt  tat-rus-pending-lex-expected.txt  tat-rus-pending-morph-expected.txt  tat-rus-pending-postchunk-expected.txt  tat-rus-pending-postgen-expected.txt  tat-rus-pending-postgen-gold.txt  tat-rus-pending-pretransfer-expected.txt  tat-rus-regression-biltrans-expected.txt  tat-rus-regression-chunker-expected.txt  tat-rus-regression-disam-expected.txt  tat-rus-regression-generator-expected.txt  tat-rus-regression-input.txt  tat-rus-regression-interchunk-expected.txt  tat-rus-regression-interchunk2-expected.txt  tat-rus-regression-lex-expected.txt  tat-rus-regression-morph-expected.txt  tat-rus-regression-postchunk-expected.txt  tat-rus-regression-postgen-expected.txt  tat-rus-regression-postgen-gold.txt  tat-rus-regression-pretransfer-expected.txt  tests.json
test-scripts/: corp.test  t1x.test  t2x.test  t3x.test  t4x.test  tat-rus.test  testvoc.test
tests/: all.test  t1x.test  t1x.test.py  tat-rus-corp.test  tat-rus.test  testvoc.test
testvoc/: README  categories.txt  inconsistency.sh  testvoc-summary.tat-rus.txt  testvoc.sh
testvoc/corpus/: trimmed-coverage.sh
testvoc/lite/: N1.txt  README  inconsistency.sh  mock-bi.dix  pending.txt  regression.txt  testvoc-summary.tat-rus.txt  testvoc.sh
testvoc/standard/: inconsistency-summary.sh  inconsistency.sh  testvoc-summary.tat-rus.txt  testvoc.sh
texts/: README  text1.ref.txt  text1.rus.txt  text1.tat.txt  text2.posted.txt  text2.ref.txt  text2.rus.txt  text2.tat.txt
